--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </div>
       <div class="col-xs-12">
         <div class="well">
-          <img class="ex-9-img"
+          <img id="el9" class="ex-9-img"
             src="https://cdn.fstoppers.com/styles/large-16-9/s3/lead/2018/04/jonathan-martin-brunate-lead-image_0.jpg"
             alt="">
         </div>
